fix: taskbox alignment with margin

--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ ul{
     background-color: white;
     line-height: 35px;
     padding: 0 20px;
-    margin: 10px;
+    margin: 10px 10px 10px 0px;
     box-shadow: 0px 10px 20px -5px lightgray;
 }
 
